2017-10-04  Florian Weimer  <fweimer@redhat.com>

	* scripts/check-local-headers.sh: Ignore nspr4 header file
	directory in addition to nspr.

2017-10-04  Guido Trentalancia  <guido@trentalancia.net>

	[BZ #17956]
	* configure.ac (--enable-nss-crypt): Use NSPR include directory.
	* configure: Regenerate.
	* crypt/Makefile (nss-cpp-flags): New variable.
	(CPPFLAGS-sha256-crypt.c, CPPFLAGS-sha512-crypt.c)
	(CPPFLAGS-md5-crypt.c): Use it.
	* scripts/check-local-headers.sh: Ignore nspr header file
	directory.

2017-10-18  Wilco Dijkstra  <wdijkstr@arm.com>

	* malloc/malloc.c (malloc_state): Use int for have_fastchunks since
	not all targets support atomics on bool.

2017-10-17  Wilco Dijkstra  <wdijkstr@arm.com>

	* malloc/malloc.c (FASTCHUNKS_BIT): Remove.
	(have_fastchunks): Remove.
	(clear_fastchunks): Remove.
	(set_fastchunks): Remove.
	(malloc_state): Add have_fastchunks.
	(malloc_init_state): Use have_fastchunks.
	(do_check_malloc_state): Remove incorrect invariant checks.
	(_int_malloc): Use have_fastchunks.
	(_int_free): Likewise.
	(malloc_consolidate): Likewise.

2017-10-17  Wilco Dijkstra  <wdijkstr@arm.com>

	* malloc/malloc.c (tcache_put): Inline.
	(tcache_get): Inline.

2017-10-13  James Clarke  <jrtc27@jrtc27.com>

	* sysdeps/powerpc/powerpc32/dl-machine.h (elf_machine_rela):
	Assign sym_map to be map for local symbols, as TLS relocations
	use sym_map to determine whether the symbol is defined and to
	extract the TLS information.
	* sysdeps/sparc/sparc32/dl-machine.h (elf_machine_rela): Likewise.
	* sysdeps/sparc/sparc64/dl-machine.h (elf_machine_rela): Likewise.

2017-08-23  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/fpu/libm-test-ulps: Regenerated.

2017-11-07  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	[BZ #22298]
	* nptl/allocatestack.c (allocate_stack): Check if
	__PTHREAD_MUTEX_HAVE_PREV is non-zero, instead if
	__PTHREAD_MUTEX_HAVE_PREV is defined.
	* nptl/descr.h (pthread): Likewise.